--- a/assets/style.css
+++ b/assets/style.css
@@ -36,9 +36,6 @@ html{
 .body{
     background-color: #3E72A4;
 }
-.aboutme{
-    color:#fff;
-}
 .me-pic{
     max-height: 24vh;
     border-color:#3E72A4;
@@ -47,7 +44,7 @@ html{
 }
 .aboutme {
     font-size: 17px;
-    height: 85vh;
+    height: 78vh;
     width: 200px;
     border-style: solid;
     border-width: 2px;
@@ -64,7 +61,6 @@ html{
     border-style: solid;
     border-color:#3E72A4;
     border-radius: 5px;
-    padding: 8px;
     display:flex;
     /* Makes the boxes not overlap with about me section */
     flex:0 0 500px;
@@ -72,6 +68,8 @@ html{
     color:lightgrey;
     text-align: center;
     align-items: center;  
+    height:25vh
+
    
 }
 .link{
@@ -79,4 +77,9 @@ html{
     border-style: solid;
     border-radius: 5px;
     border-width: 1px;
+    text-decoration: none;
+}
+.RecentWork{
+    justify-content: center;
+    display: flex;
 }
